[package]
name = "apex-singularity"
version = "206.14.0"
edition = "2021"

[[bin]]
name = "apex-singularity"
path = "src/main.rs"

[dependencies]
# 1. ALLOY (Stripped to avoid conflict)
# We disable default features to remove Alloy's copy of c-kzg.
# We manually add 'rpc-client' and 'ws' for connectivity.
alloy = { version = "1.4.3", default-features = false, features = [
    "std", 
    "reqwest", 
    "pubsub",
    "rpc-types-eth",
    "sol-types",
    "providers",
    "transport-ws",
    "transport-http",
    "signer-local",
    "network",
    "contract",
    "rpc-client" 
] }

# 2. REVM (Stable v25)
# We use version 25.0.0 with DEFAULT features enabled.
# This ensures 'EVM' and 'db' are present.
revm = "25.0.0"

# 3. UTILITIES
# Removed revm-primitives to let revm manage its own versions.
url = "2.5"
tokio = { version = "1.38", features = ["full", "parking_lot"] }
dashmap = "6.0"
core_affinity = "0.8"
num_cpus = "1.16"
anyhow = "1.0"
dotenv = "0.15"
colored = "2.1"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
