[package]
name = "apex-singularity"
version = "206.14.0"
edition = "2021"

[[bin]]
name = "apex-singularity"
path = "src/main.rs"

[dependencies]
# --- ALLOY (network / rpc / ws) ---
alloy = { version = "1.4.3", default-features = false, features = [
    "std",
    "reqwest",
    "pubsub",
    "rpc-types-eth",
    "sol-types",
    "providers",
    "transport-ws",
    "transport-http",
    "signer-local",
    "network",
    "contract",
    "rpc-client"
] }

# --- REVM (EVM simulation) ---
revm = "33.1"

# --- UTILITIES ---
tokio = { version = "1.38", features = ["full", "parking_lot"] }
url = "2.5"
anyhow = "1.0"
dotenv = "0.15"
colored = "2.1"
futures-util = "0.3"
dashmap = "6.0"
core_affinity = "0.8"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

